<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grad2"
    android:layout_height="match_parent"
    android:fontFamily="@font/allerta"
    tools:context=".donat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/donate_for_the_mankind"
        android:textColor="@color/blue1"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:background="@color/blue1"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"

                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:text="@string/help_each_other"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue2" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:background="@color/blue1"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"

                android:paddingRight="20dp"
                android:paddingBottom="20dp">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Email Address"
                    android:autofillHints="abc@gmail.com"
                    android:inputType="number" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter amount to Split"
                    android:autofillHints="50"
                    android:inputType="number" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="10"
                    android:hint="Enter amount of card to donate"
                    android:inputType="number" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="610dp"
        android:background="@android:color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="615dp"
        android:layout_marginRight="160dp">

        <EditText
            android:id="@+id/idEdtAmount"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="Enter amount to be payed"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="595dp">

        <Button
            android:id="@+id/idBtnPay"
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0A930F"
            android:text="Donate"
            android:textAllCaps="false" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/blue3"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu" />
</RelativeLayout>